1999-05-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Add hp-ux and alpha to JDK JAVAINCLUDES.

1999-05-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Don't force JAVAC if set.
	New substituion JAVALIBPREFIX.  Japhar expects to see libraries
	prefixed like libjaphar_LIBNAME.

1999-05-13  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): In JAVA, use KAFFELIBRARYPATH instead of
	LD_LIBRARY_PATH.  KAFFELIBRARYPATH sets dynamic library path,
	and we count on -rpath being compiled into the executable itself;
	LD_LIBRARY_PATH isn't portable, e.g. HPUX.  For JAVALIBS, use
	only jdkdir/lib/kaffe.

1999-05-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acpath.m4 (md_CHECK_PATH_SYNTAX): New macro.

	* Makefile.am (EXTRA_DIST): Add acpath.m4.

	* acjdk.m4 (vj_FIND_JDK): New substitution jdkdosdir.  Set
	JAVACLASSES, JAVAENV, and JAVAC to use jdkdosdir and
	backslashes in cygwin case, and jdkdir and slashes, otherwise.

1999-04-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Add check for $jdkdir/include/winnt.
	(md_CHECK_JNI_H): New macro.

	* acxpm.m4 (md_FIND_XPM): Use AC_TRY_COMPILE instead of simple
	file tests.  Add messages.  Don't do xpm.h tests if gnuwin32.
	(md_STRUCT_XPM_ALLOCPIXELS): Use X11/xpm.h or xpm.h depending on
	above.

1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acxpm.m4 (md_FIND_XPM): Check for xpm.h in $xpmincludedir
	and $xpmincludedir/X11, and define HAVE_X11_XPM_H or HAVE_XPM_H.

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add it.

	* acsizes.m4 (md_CHECK_SIZES): New file, new macro.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acxpm.m4 (md_STRUCT_XPM_ALLOCPIXELS): New macro.

	* acjdk.m4 (JAVASWARMSCRIPTS): New substitution.	

1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (JAVASWARMLIBS): New substitution.
