@@ -1,6 +1,7 @@
 1999-05-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* acjdk.m4: Add hp-ux and alpha to JDK JAVAINCLUDES.
+	If $jdkdir is /usr, use /usr/include/java, otherwise $prefix/include.
 
 1999-05-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
